infra/ingress.yml
apiVersion: extensions/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
   name: sucheths
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: sucheths
    servicePort: 80
